--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@rollup/plugin-yaml": "^4.1.2",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
