--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.3",
     "react-syntax-highlighter": "^15.6.6",
     "zustand": "^5.0.8"
   },
