--- a/questions/q002.yaml
+++ b/questions/q002.yaml
@@ -15,10 +15,10 @@ question: |-
 
   What is the output of this code?
 answers:
-- Some([1, 2, 3])
-- Some([4, 5, 6, 7])
-- Some([1, 2, 3, 7])
-- Some([1, 2, 3, 4, 5, 6, 7])
+- '`Some([1, 2, 3])`'
+- '`Some([4, 5, 6, 7])`'
+- '`Some([1, 2, 3, 7])`'
+- '`Some([1, 2, 3, 4, 5, 6, 7])`'
 correct_answer: 2
 expected_output:
 - Some([1, 2, 3, 7])
