--- a/questions/q139.yaml
+++ b/questions/q139.yaml
@@ -7,68 +7,64 @@ question: |-
       let (tx, rx) = mpsc::sync_channel(1);
       
       let handle = thread::spawn(move || {
-          println!("Thread: Sending 1");
+          println!("T1");
           tx.send(1).unwrap();
           
-          println!("Thread: Sending 2");
+          println!("T2");
           tx.send(2).unwrap();
           
-          println!("Thread: Done");
+          println!("T3");
+          tx.send(3).unwrap();
       });
       
-      println!("Main: Sleeping");
       thread::sleep(std::time::Duration::from_millis(50));
-      
-      println!("Main: Receiving");
-      println!("Main: Got {}", rx.recv().unwrap());
+      println!("M1: {}", rx.recv().unwrap());
       
       thread::sleep(std::time::Duration::from_millis(50));
+      println!("M2: {}", rx.recv().unwrap());
       
-      println!("Main: Receiving again");
-      println!("Main: Got {}", rx.recv().unwrap());
+      thread::sleep(std::time::Duration::from_millis(50));
+      println!("M3: {}", rx.recv().unwrap());
       
       handle.join().unwrap();
-      println!("Main: Done");
   }
   ```
 
   What does this print?
 answers:
-- 'Thread: Sending 1, Thread: Sending 2, Main: Sleeping, Main: Receiving, Main: Got 1, Main: Receiving again, Main: Got 2, Thread: Done, Main: Done'
-- 'Thread: Sending 1, Thread: Sending 2, Thread: Done, Main: Sleeping, Main: Receiving, Main: Got 1, Main: Receiving again, Main: Got 2, Main: Done'
-- 'Thread: Sending 1, Main: Sleeping, Main: Receiving, Main: Got 1, Thread: Sending 2, Thread: Done, Main: Receiving again, Main: Got 2, Main: Done'
-- 'Main: Sleeping, Thread: Sending 1, Thread: Sending 2, Thread: Done, Main: Receiving, Main: Got 1, Main: Receiving again, Main: Got 2, Main: Done'
-correct_answer: 2
+- 'T1, T2, M1: 1, T3, M2: 2, M3: 3'
+- 'T1, M1: 1, T2, M2: 2, T3, M3: 3'
+- 'T1, T2, T3, M1: 1, M2: 2, M3: 3'
+- 'T1, T2, then panics because channel buffer is full'
+correct_answer: 0
 expected_output:
-- 'Thread: Sending 1'
-- 'Main: Sleeping'
-- 'Main: Receiving'
-- 'Main: Got 1'
-- 'Thread: Sending 2'
-- 'Thread: Done'
-- 'Main: Receiving again'
-- 'Main: Got 2'
-- 'Main: Done'
+- 'T1'
+- 'T2'
+- 'M1: 1'
+- 'T3'
+- 'M2: 2'
+- 'M3: 3'
 explanation: |-
   This question tests understanding of synchronous channels and blocking behavior
   in Rust's message passing concurrency model. A synchronous channel created with
   `mpsc::sync_channel(1)` has a bounded capacity of 1, meaning it can buffer only
   one message before the sender blocks.
-
-  When the spawned thread starts, it successfully sends the first value (1) to the
-  channel, filling the buffer. When it attempts to send the second value (2), the
-  buffer is full, so the thread blocks and waits for space to become available.
-  This blocking occurs between printing "Thread: Sending 1" and "Thread: Sending
-  2".
-
-  Meanwhile, the main thread prints "Main: Sleeping" and sleeps for 50ms. After
-  waking, it receives the first value from the channel, which frees up space in
-  the buffer. This immediately unblocks the spawned thread, allowing it to
-  complete sending the second value and print "Thread: Sending 2" followed by
-  "Thread: Done".
-
-  The main thread then sleeps again, receives the second value, and completes
-  execution. The key insight is that synchronous channels with bounded capacity
-  provide backpressure: senders block when the buffer is full, creating a natural
-  coordination mechanism between producer and consumer threads. This is useful for
-  preventing producers from overwhelming consumers or consuming too much memory.
+  
+  The spawned thread prints `T1` and sends the first value (1), filling the buffer.
+  When it attempts to send the second value (2), the buffer is full, so the thread
+  blocks. It prints `T2` but then waits before the send completes.
+  
+  Meanwhile, the main thread sleeps for 50ms, then receives the first value,
+  printing `M1: 1`. This frees up space in the buffer, unblocking the spawned
+  thread to complete sending the second value. The thread then attempts to send
+  the third value (3), prints `T3`, but blocks again because the buffer is full.
+  
+  The main thread sleeps again, receives the second value printing `M2: 2`, which
+  unblocks the thread to complete sending the third value. Finally, the main thread
+  sleeps once more, receives the third value printing `M3: 3`, and completes.
+  
+  The key insight is that synchronous channels with bounded capacity provide
+  backpressure: senders block when the buffer is full, creating natural coordination
+  between producer and consumer threads. This prevents producers from overwhelming
+  consumers or consuming too much memory. Note that `send()` does not panic when the
+  buffer is full—it blocks until space becomes available.
