--- a/questions/q193.yaml
+++ b/questions/q193.yaml
@@ -42,8 +42,8 @@ explanation: |-
 
   The code demonstrates several key BTreeMap features:
 
-  1. **Range queries with Bound enum and type annotations**: The `range::<str,
-  _>()` method requires a type annotation to specify the type being compared. The
+  1. **Range queries with Bound enum and type annotations**: The `range::<str,_>()` 
+  method requires a type annotation to specify the type being compared. The
   turbofish syntax `::<str, _>` tells the compiler that we're ranging over `str`
   types. The range uses `Bound::Excluded("Bob")` (starts after "Bob", not
   including it) and `Bound::Included("Eve")` (ends at "Eve", including it). Since
@@ -61,9 +61,9 @@ explanation: |-
   `Some(("Eve", 88))` respectively.
 
   4. **Retain operation**: The `retain()` method modifies the map in-place,
-  keeping only entries where the closure returns true. With the condition `score
-  >= 85`, "Charlie" (78) is removed, while "Alice" (85), "Bob" (92), "David" (96),
-  and "Eve" (88) remain.
+  keeping only entries where the closure returns true. With the condition 
+  `score >= 85`, "Charlie" (78) is removed, while "Alice" (85), "Bob" (92), 
+  "David" (96), and "Eve" (88) remain.
 
   The key takeaway is that BTreeMap provides powerful range query capabilities
   with fine-grained control over boundary inclusion/exclusion through the Bound
