--- a/questions/q162.yaml
+++ b/questions/q162.yaml
@@ -5,7 +5,7 @@ question: |-
   fn main() {
       let paths = vec![
           "/usr/bin/../lib/file.so",
-          "relative/../path/to/file",
+          "relative/path/../file",
           "../../../etc/passwd",
           "normal/path/file.txt"
       ];
@@ -23,14 +23,14 @@ question: |-
 
   What does this code print?
 answers:
-- All print `Some("file")` as the parent directory name
-- First prints `Some("lib")`, second prints `Some("to")`, third prints `Some("etc")`, fourth prints `Some("path")`
-- First prints `Some("lib")`, second prints `Some("to")`, third prints `None`, fourth prints `Some("path")`
+- '`Some("file.so")`, `Some("file")`, `Some("passwd")`, `Some("file.txt")`'
+- '`Some("lib")`, `None`, `Some("etc")`, `Some("path")`'
+- '`Some("lib")`, `Some("..")`, `Some("etc")`, `Some("path")`'
 - All print `None` because parent directories cannot be determined from strings
 correct_answer: 1
 expected_output:
 - '/usr/bin/../lib/file.so: Some("lib")'
-- 'relative/../path/to/file: Some("to")'
+- 'relative/path/../file: None'
 - '../../../etc/passwd: Some("etc")'
 - 'normal/path/file.txt: Some("path")'
 explanation: |-
@@ -44,21 +44,16 @@ explanation: |-
   For `/usr/bin/../lib/file.so`, the parent is `/usr/bin/../lib`, and its file
   name component is `lib`, resulting in `Some("lib")`.
 
-  For `relative/../path/to/file`, the parent is `relative/../path/to`, and its
-  file name component is `to`, resulting in `Some("to")`.
+  For `relative/path/../file`, the parent is `relative/path/..`. The final
+  component `..` is not a valid file name, so the result is `None`.
 
-  For `../../../etc/passwd`, the parent is `../../../etc`. Rust's `Path` API
-  performs lexical (string-based) path operations. When extracting the file name
-  from `../../../etc`, it treats `etc` as a regular path component and returns
-  `Some("etc")`. The `..` components earlier in the path don't affect the file
-  name extraction of the final component.
+  For `../../../etc/passwd`, the parent is `../../../etc`, and its file name
+  component is `etc`, resulting in `Some("etc")`.
 
   For `normal/path/file.txt`, the parent is `normal/path`, and its file name
   component is `path`, resulting in `Some("path")`.
 
   The key takeaway is that Rust's `Path` API performs lexical operations without
   filesystem access or path normalization. The `file_name()` method extracts the
-  final component of a path as a string operation, treating each segment between
-  separators as a distinct component. Path components like `..` are treated as
-  regular components in the path string, and `file_name()` simply returns the last
-  non-empty component.
+  final component of a path, but returns `None` for special components like `..`
+  and `.`, as these are not considered valid file names.
